--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,5 @@
 name: inbox-zero-services
 services:
-  redis:
-    image: redis
-    ports:
-      - ${REDIS_PORT:-6380}:6379
-    volumes:
-      - database-data:/data
-    networks:
-      - inbox-zero-network
-
   serverless-redis-http:
     ports:
       - "${REDIS_HTTP_PORT:-8079}:80"
@@ -18,7 +9,7 @@ services:
     environment:
       SRH_MODE: env
       SRH_TOKEN: ${UPSTASH_REDIS_TOKEN}
-      SRH_CONNECTION_STRING: "redis://redis:6379" # Using `redis` hostname since they're in the same Docker network.
+      SRH_CONNECTION_STRING: "${REDIS_URL}" # Using `redis` hostname since they're in the same Docker network.
     networks:
       - inbox-zero-network
 
@@ -28,8 +19,6 @@ services:
       dockerfile: ./docker/Dockerfile.web
     env_file:
       - ./.env
-    depends_on:
-      - redis
     ports:
       - ${WEB_PORT:-3000}:3000
     networks:
